[package]
name = "solanabls"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solanabls"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "=0.31.1" }
anchor-syn = { version = "=0.31.1" }
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-std = "0.5.0"
num-bigint = "0.4.6"
num-traits = "0.2.19"
# rust-bls-bn254 = "0.2.1"
# rust-bls-bn254 = { path = "../../../rust-bls-bn254-0.2.1" }
# solana-sdk = "1.18.26"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
# solana-sdk = "1.18.26"
solana-program = "2.1.0"
solana-bn254 = "2.1.0"
hex = "0.4.3"
